--- a/База_рекламаций/reclamationhub/claims/templates/claims/claim_prognosis.html
+++ b/База_рекламаций/reclamationhub/claims/templates/claims/claim_prognosis.html
@@ -26,7 +26,7 @@
         <div class="col-md-8">
             <div class="card">
                 <div class="card-header">
-                    <h5>🔮 Параметры прогнозирования</h5>
+                    <h5>Параметры прогнозирования</h5>
                 </div>
                 <div class="card-body">
                     <form method="post" id="prognosisForm">
