--- a/База_рекламаций/reclamationhub/reports/templates/reports/culprits_defect.html
+++ b/База_рекламаций/reclamationhub/reports/templates/reports/culprits_defect.html
@@ -30,11 +30,14 @@
                     <h5>🔍 Параметры анализа</h5>
                 </div>
                 <div class="card-body">
-                    <p>Отчетный месяц: <strong>{{ report_month }}</strong> {{ report_year }} года</p>
+                    <p><strong>Отчетный месяц:</strong> {{ report_month }} {{ report_year }} года</p>
+
+                    <!-- Горизонтальная линия -->
+                    <hr class="my-3">
 
                     <!-- Показываем номер акта из JSON файла -->
                     <p>
-                        Номер последнего акта, включённого в предыдущую справку:
+                        <strong>Номер последнего акта</strong>, включённого в предыдущую справку:
                         {% if default_act_number %}
                             <span><strong>{{ default_act_number }}</strong></span>
                         {% else %}
@@ -62,7 +65,10 @@
                             </small>
                         </div>
 
-                        <!-- Справочная информация -->
+                        <!-- Горизонтальная линия -->
+                        <hr class="my-3">
+
+                        <!-- Информационная панель -->
                         <br>
                         <div class="card border-secondary mb-4">
                             <div class="card-header">
@@ -71,7 +77,6 @@
                             <div class="card-body">
                                 <ul class="mb-0">
                                     <li>Только рекламации <strong>признанные</strong> по актам исследования.</li>
-                                    {% comment %} <li>Анализ будет проведен начиная с номера <strong>следующего</strong> акта исследования</li> {% endcomment %}
                                     <li>Разделение по виновникам: <strong>Подразделения завода</strong> и <strong>Не определено (БЗА)</strong>.</li>
                                     <li>Группировка по потребителям и изделиям.</li>
                                 </ul>
@@ -82,6 +87,9 @@
                         <div class="alert alert-info mb-4">
                             <strong>Дата формирования справки:</strong> {{ current_date }}
                         </div>
+
+                        <!-- Горизонтальная линия -->
+                        <hr class="my-3">
 
                         <!-- Кнопки -->
                         <div class="d-flex gap-2">
