--- a/База_рекламаций/reclamationhub/reports/templates/reports/date_pretence.html
+++ b/База_рекламаций/reclamationhub/reports/templates/reports/date_pretence.html
@@ -47,6 +47,9 @@
                                    required>
                         </div>
 
+                        <!-- Горизонтальная линия -->
+                        <hr class="my-3">
+
                         <!-- Кнопки -->
                         <div class="d-flex gap-2 mt-4">
                             <button type="submit" class="btn btn-primary">
