--- a/База_рекламаций/reclamationhub/templates/base.html
+++ b/База_рекламаций/reclamationhub/templates/base.html
@@ -35,9 +35,11 @@
     </div>
 
     <!-- Footer -->
+    <br>
+    <hr class="my-0">  <!-- Горизонтальная линия -->
     <footer class="footer mt-auto py-3 bg-light">
         <div class="container">
-            <span class="text-muted">© Dev by VIM - {% now "Y" %} База рекламаций ОТК</span>
+            <span class="text-muted">© Dev by Vasilenok Igor - {% now "Y" %} Аналитическая система управления качества</span>
         </div>
     </footer>
 
