--- a/База_рекламаций/reclamationhub/reports/templates/reports/references.html
+++ b/База_рекламаций/reclamationhub/reports/templates/reports/references.html
@@ -56,6 +56,10 @@
                 </div>
             </div>
         </div>
+
+        <!-- Горизонтальная линия -->
+        <hr class="my-3">
+
         <div class="col-lg-6 col-md-6 col-sm-12 mb-3">
             <div class="card h-100">
                 <div class="card-body">
