--- a/База_рекламаций/reclamationhub/reports/templates/reports/enquiry_period.html
+++ b/База_рекламаций/reclamationhub/reports/templates/reports/enquiry_period.html
@@ -51,9 +51,11 @@
 
                     <form method="post">
                         {% csrf_token %}
-                        <button type="submit" class="btn btn-primary btn-lg">
-                            📈 Сформировать справку
-                        </button>
+                        <div class="d-flex gap-2">
+                            <button type="submit" class="btn btn-primary btn">
+                                📊 Сформировать справку
+                            </button>
+                        </div>
                     </form>
                 </div>
             </div>
