--- a/База_рекламаций/reclamationhub/reports/templates/reports/length_study.html
+++ b/База_рекламаций/reclamationhub/reports/templates/reports/length_study.html
@@ -110,9 +110,11 @@
                         <!-- Горизонтальная линия -->
                         <hr class="my-3">
 
-                        <button type="submit" class="btn btn-primary btn-lg">
-                            📊 Сделать расчеты
-                        </button>
+                        <div class="d-flex gap-2 justify-content-end">
+                            <button type="submit" class="btn btn-primary btn">
+                                📊 Сделать расчеты
+                            </button>
+                        </div>
                     </form>
                 </div>
             </div>
